examples/errors/parsing/incr-codom-named-res.rcn
rfun incr (p : Ptr Int, [res] r : (do x : Int = Own[Int](p)))
  -> ([res] r' : (do x' : Int = Own[Int](p))) [impure] = (res r)
main : () [impure] = ()
